show do item
