# src/routes/itens.route.ts
@@ -8,5 +8,6 @@ const routes = Router();
 
 routes.post("/environments/:id/itens", auth.call, ItensController.create);
 routes.get("/environments/:id/itens", auth.call, ItensController.listing);
+routes.get("/environments/:env_id/itens/:id", auth.call, ItensController.show);
 
 export default routes;
